user-defined-routes/rg-prd-nsg-apps-1/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
  },
  "variables": {
    "existingVirtualNetworkResourceGroupName": "rg-prd-vn-apps-1",
    "newNetworkSecurityGroupResourceGroupName": "rg-prd-nsg-apps-1",
    "existingVirtualNetworkName": "prd-vn-apps-1",
    "location": "[resourceGroup().location]",
    "existingAppGwSubnetName": "prd-vn-apps-1-appgw-1",
    "existingDmzSubnetName": "prd-vn-apps-1-dmz-1",
    "existingFrontendSubnetName": "prd-vn-apps-1-frontend-1",
    "existingBackendSubnetName": "prd-vn-apps-1-backend-1",
    "newAppGwNsgName": "[concat(variables('existingAppGwSubnetName'), '-nsg')]",
    "newDmzNsgName": "[concat(variables('existingDmzSubnetName'), '-nsg')]",
    "newFrontendNsgName": "[concat(variables('existingFrontendSubnetName'), '-nsg')]",
    "newBackendNsgName": "[concat(variables('existingBackendSubnetName'), '-nsg')]",
    "appGwSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingAppGwSubnetName'))]",
    "dmzSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingDmzSubnetName'))]",
    "frontendSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingFrontendSubnetName'))]",
    "backendSubnetId": "[resourceId(variables('existingVirtualNetworkResourceGroupName'),'Microsoft.Network/virtualNetworks/subnets', variables('existingVirtualNetworkName'), variables('existingBackendSubnetName'))]",

    "prdHub1GatewaySubnetAddressPrefix": "172.18.0.0/24",
    "prdHub1ManagementSubnetAddressPrefix": "172.18.1.0/24",
    "prdHub1UntrustedSubnetAddressPrefix": "172.18.2.0/24",
    "prdHub1TrustedSubnetAddressPrefix": "172.18.3.0/24",
    "prdHub1SharedSubnetAddressPrefix": "172.18.4.0/24",

    "prdApps1AppGwSubnetAddressPrefix": "172.19.1.0/24",
    "prdApps1DmzSubnetAddressPrefix": "172.19.2.0/24",
    "prdApps1FrontendSubnetAddressPrefix": "172.19.3.0/24",
    "prdApps1BackendSubnetAddressPrefix": "172.19.4.0/24",

    "preApps1AppGwSubnetAddressPrefix": "172.20.1.0/24",
    "preApps1DmzSubnetAddressPrefix": "172.20.2.0/24",
    "preApps1FrontendSubnetAddressPrefix": "172.20.3.0/24",
    "preApps1BackendSubnetAddressPrefix": "172.20.4.0/24",

    "prdHub1ManagementAddresses": [ "172.18.1.4" ]
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newAppGwNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowAppGwProbePorts",
            "properties": {
              "description": "Allow AppGateway probe ports",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "65503-65534",
              "sourceAddressPrefix": "AzureCloud",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowWebPorts",
            "properties": {
              "description": "Allow Web ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "80", "443" ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }

        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newDmzNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": "[variables('prdHub1ManagementAddresses')]",
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowWebPorts",
            "properties": {
              "description": "Allow Web ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "80", "443" ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowIISManagementPorts",
            "properties": {
              "description": "Allow IIS management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "8172" ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPrdHub1ManagementSubnet",
            "properties": {
              "description": "Deny prd-hub-1-management-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1ManagementSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1UntrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-untrusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1UntrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1TrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-trusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1TrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1SharedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-shared-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1SharedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1FrontendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }

        ]
      }
    },


    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newFrontendNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": "[variables('prdHub1ManagementAddresses')]",
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowPrdApps1DmzServers",
            "properties": {
              "description": "Allow prd-vn-apps-1-dmz-1 servers",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [ "172.19.2.4" ],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPrdHub1ManagementSubnet",
            "properties": {
              "description": "Deny prd-hub-1-management-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1ManagementSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1UntrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-untrusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1UntrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1TrustedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-trusted-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1TrustedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdHub1SharedSubnet",
            "properties": {
              "description": "Deny prd-hub-1-shared-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1SharedSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1DmzSubnet",
            "properties": {
              "description": "Deny prd-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }


        ]
      }
    },


    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-04-01",
      "name": "[variables('newBackendNsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowManagementPorts",
            "properties": {
              "description": "Allow management ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "22", "3389" ],
              "sourceAddressPrefixes": "[variables('prdHub1ManagementAddresses')]",
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowSQLServerPorts",
            "properties": {
              "description": "Allow SQL Server ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "1433" ],
              "sourceAddressPrefixes": [ "172.19.3.4" ],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowMySQLPorts",
            "properties": {
              "description": "Allow MySQL/MariaDB ports",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "",
              "sourceAddressPrefix": "",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [ "3306" ],
              "sourceAddressPrefixes": [ "172.19.3.4" ],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowPrdApps1BackendSubnet",
            "properties": {
              "description": "Allow prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowDomainControllersPortsTCP",
            "properties": {
              "description": "Allow domain controllers ports TCP",
              "protocol": "TCP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "25",
                "42",
                "135",
                "137",
                "139",
                "389",
                "636",
                "3268-3269",
                "88",
                "53",
                "445",
                "464",
                "9389",
                "5722",
                "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationPortRange": ""
            }
          },
          {
            "name": "AllowDomainControllersPortsUDP",
            "properties": {
              "description": "Allow domain controllers ports UDP",
              "protocol": "UDP",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 160,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "389",
                "88",
                "53",
                "445",
                "464",
                "123",
                "137-138",
                "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [],
              "destinationPortRange": ""
            }
          },


          {
            "name": "DenyPrdHub1ManagementSubnet",
            "properties": {
              "description": "Deny prd-hub-1-management-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdHub1ManagementSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },


          {
            "name": "DenyPrdApps1DmzSubnet",
            "properties": {
              "description": "Deny prd-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1FrontendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3010,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1BackendSubnet",
            "properties": {
              "description": "Deny prd-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3020,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPrdApps1AppGwSubnet",
            "properties": {
              "description": "Deny prd-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('prdApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3030,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },

          {
            "name": "DenyPreApps1DmzSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-dmz-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1DmzSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3040,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1FrontendSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-frontend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1FrontendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1BackendSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-backend-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1BackendSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3060,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "DenyPreApps1AppGwSubnet",
            "properties": {
              "description": "Deny pre-vn-apps-1-appgw-1 subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('preApps1AppGwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 3070,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }

        ]
      }
    }

  ],
  "outputs": {
  }
}
